--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,6 @@
 .intro-content {
   position: relative;
-  top: -8rem;
+  /* top: -8rem; */
   display: grid;
   grid-template-columns: 1fr 1.5fr;
   gap: var(--gap);
@@ -22,7 +22,7 @@
 .top3-content {
   max-width: 64rem;
   display: flex;
-  flex-direction:  column; 
+  flex-direction: column;
   flex-wrap: nowrap;
   justify-content: center;
   height: 100vh;
@@ -37,11 +37,11 @@
 }
 
 .grid-main-heading {
-    margin-bottom: 1rem;
+  margin-bottom: 1rem;
 }
 
 .grid-description {
-    padding-bottom: 8rem;
+  padding-bottom: 8rem;
 }
 
 .grid {
@@ -55,7 +55,7 @@
   font-size: 3rem;
   position: relative;
   padding-left: 5rem;
-  padding-bottom: 2rem ;
+  padding-bottom: 2rem;
 }
 
 .grid h3::before {
@@ -70,19 +70,114 @@
 }
 
 .gallery-img {
-    width: 100%;
-    max-width: 36rem;
-    max-height: 24rem;
-    overflow: hidden;
+  width: 100%;
+  max-width: 36rem;
+  max-height: 24rem;
+  overflow: hidden;
 }
 
-
-
 .gallery-img img {
-    transition: all 300ms ease;
+  transition: all 300ms ease;
 }
 
 .gallery-img img:hover {
-    transform: translate(-3%, 3%) scale(1.2) rotate(5deg);
-    
+  transform: translate(-3%, 3%) scale(1.2) rotate(5deg);
+}
+
+.contact-form {
+  grid-column: span 2;
+}
+
+.contact-form .form-grid {
+  display: flex;
+  border: none;
+  flex-direction: row;
+  flex-wrap: wrap;
+  gap: var(--gap);
+}
+
+.contact-content {
+  height: 100%;
+}
+
+.form-grid legend {
+  font-style: italic;
+  font-size: 2rem;
+  margin-bottom: 3rem;
+}
+
+.form-group {
+  flex: 1 1 320px;
+}
+
+.form-group label {
+  display: block;
+  margin-bottom: 1rem;
+}
+
+.form-group input, .form-group textarea {
+  border: none;
+  background: var(--white-color);
+  padding: 1.5rem 2rem;
+  width: 100%;
+  font-size: 3rem;
+  outline: none;
+}
+
+.form-group input:focus, .form-group textarea:focus {
+  box-shadow: 0 0 0 2px var(--secondary-color);
+}
+
+
+.form-group button {
+  margin-bottom: 30px;
+  border: 0.5rem solid var(--white-color);
+  border-radius: 3px;
+  background: none;
+  color: var(--white-color);
+  padding: 1.5px 2rem;
+  font-size: 3rem;
+  cursor: pointer;
+  transition: all 300ms ease-in-out;
+}
+
+
+.form-group button:hover {
+  border: 0.5rem solid var(--white-color);
+  border-radius: 3px;
+  background: var(--white-color);
+  color: var(--primary-color);
+  padding: 1.5px 2rem;
+  font-size: 3rem;
+  cursor: pointer;
+  transition: all 300ms ease-in-out;
+}
+
+
+
+.form-group ::placeholder {
+  color: rgba(0, 0, 0, 0.3)
+}
+
+.footer {
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  font-size: 2rem;
+
+}
+
+.footer a {
+  color: var(--primary-color)
+}
+.heart {
+  color: var(--secondary-color);
+}
+
+.footer p {
+
+  margin: 0;
+  padding: 3rem;
+
+
 }
