--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -181,3 +181,24 @@
 
 
 }
+
+
+
+@media (max-width: 800px) {
+  .intro-content, .grid {
+    grid-template-columns: 1fr;
+  }
+
+  .gallery-img {
+width: 100%;
+max-width: 100%;
+max-height: 100%;
+
+  }
+
+  .gallery-img img {
+    width: 100%;
+  }
+
+}
+
