--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,7 +25,7 @@
   flex-direction: column;
   flex-wrap: nowrap;
   justify-content: center;
-  height: 100vh;
+  min-height: 100vh;
   text-align: center;
 }
 
@@ -115,7 +115,8 @@
   margin-bottom: 1rem;
 }
 
-.form-group input, .form-group textarea {
+.form-group input,
+.form-group textarea {
   border: none;
   background: var(--white-color);
   padding: 1.5rem 2rem;
@@ -124,10 +125,10 @@
   outline: none;
 }
 
-.form-group input:focus, .form-group textarea:focus {
+.form-group input:focus,
+.form-group textarea:focus {
   box-shadow: 0 0 0 2px var(--secondary-color);
 }
-
 
 .form-group button {
   margin-bottom: 30px;
@@ -141,7 +142,6 @@
   transition: all 300ms ease-in-out;
 }
 
-
 .form-group button:hover {
   border: 0.5rem solid var(--white-color);
   border-radius: 3px;
@@ -153,10 +153,8 @@
   transition: all 300ms ease-in-out;
 }
 
-
-
 .form-group ::placeholder {
-  color: rgba(0, 0, 0, 0.3)
+  color: rgba(0, 0, 0, 0.3);
 }
 
 .footer {
@@ -164,36 +162,53 @@
   align-items: center;
   text-align: center;
   font-size: 2rem;
-
 }
 
 .footer a {
-  color: var(--primary-color)
+  color: var(--primary-color);
 }
 .heart {
   color: var(--secondary-color);
 }
 
 .footer p {
-
   margin: 0;
   padding: 3rem;
-
-
 }
 
+.close-menu {
+  display: none;
+}
 
+.back-to-top {
+  position: fixed;
+  bottom: 5rem;
+  right: 20px;
+  background: var(--white-color);
+  width: 5rem;
+  height: 5rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+  color: var(--secondary-color);
+  border: 0.1rem solid var(--primary-color);
+}
+
+.back-to-top img {
+  width: 40%;
+}
 
 @media (max-width: 800px) {
-  .intro-content, .grid {
+  .intro-content,
+  .grid {
     grid-template-columns: 1fr;
   }
 
   .gallery-img {
-width: 100%;
-max-width: 100%;
-max-height: 100%;
-
+    width: 100%;
+    max-width: 100%;
+    max-height: 100%;
   }
 
   .gallery-img img {
@@ -204,7 +219,52 @@ max-height: 100%;
     display: block;
   }
 
+  .menu {
+    bottom: 0;
+    text-align: center;
+  }
+
+  .menu-content,
+  .menu-content ul {
+    flex-direction: column;
+    justify-content: center;
+  }
+
+  .menu-content {
+    height: 100vh;
+  }
+
+  .menu {
+    display: none;
+  }
+
+  .close-menu-label::after {
+    content: "≡";
+    position: fixed;
+    z-index: 2;
+    top: 1rem;
+    right: 2rem;
+    background: var(--primary-color);
+    color: var(--white-color);
+    font-size: 5rem;
+    line-height: 5rem;
+    width: 5rem;
+    height: 5rem;
+    text-align: center;
+    padding: 0.5rem;
+    cursor: pointer;
+  }
+
+  .close-menu:checked ~ .menu {
+    display: block;
+  }
+
+  .close-menu:checked ~ .close-menu-label::after {
+    display: block;
+    content: "×";
+  }
+
+  .menu-spacing {
+    display: none;
+  }
 }
-
-
-
