resize form @queryes

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -147,7 +147,7 @@
   border-radius: 3px;
   background: var(--white-color);
   color: var(--primary-color);
-  padding: 1.5px 2rem;
+  padding: 1.5rem 2rem;
   font-size: 3rem;
   cursor: pointer;
   transition: all 300ms ease-in-out;
@@ -267,4 +267,15 @@
   .menu-spacing {
     display: none;
   }
+}
+
+@media (max-width: 400px) {
+  .contact-form> .form-grid> .form-group input, .contact-form> .form-grid> .form-group textarea  {
+  width: 90%;
+  }
+
+  .contact-form> .form-grid> .form-group input::placeholder, .contact-form> .form-grid> .form-group textarea::placeholder  {
+    
+    font-size: 2rem;
+    }
 }
